objects/Product_Process__c.object
<CustomObject>
    <fields>
        <fullName>Active_Product__c</fullName>
        <formula>IF(Product__r.IsActive = TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_to_Role_10__c</fullName>
        <label>Assign to Role 10</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_to_Role_1__c</fullName>
        <label>Assign to Role 1</label>
        <picklist>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_to_Role_2__c</fullName>
        <label>Assign to Role 2</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grouping_Category__c</fullName>
        <formula>CASE( Product__r.Grouping_Category__c , 
&quot;CRM&quot;,&quot;CRM&quot;, 
&quot;ILM&quot;,&quot;ILM&quot;, 
&quot;Inventory&quot;,&quot;Inventory&quot;,
&quot;Add On&quot;, &quot;Add On&quot;,
&quot;Fulfillment&quot;, &quot;Fulfillment&quot;,
&quot;Hardware&quot;,&quot;Hardware&quot;,
&quot;Website&quot;,&quot;Website&quot;,
&quot;Training&quot;,&quot;Training&quot;,
&quot;Solution&quot;, &quot;CRM&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_10_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone 10 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Processes9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_10_Stage__c</fullName>
        <label>Milestone 10 Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Customer&apos;s Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Travel Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing/Shipping/Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_10__c</fullName>
        <label>Milestone 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone 1 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Stage__c</fullName>
        <label>Milestone 1 Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Customer&apos;s Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Travel Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing/Shipping/Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_1__c</fullName>
        <label>Milestone 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone 2 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Stage__c</fullName>
        <label>Milestone 2 Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Customer&apos;s Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Travel Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing/Shipping/Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_2__c</fullName>
        <label>Milestone 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Imp_Contact_Template_ID__c</fullName>
        <label>Notify Imp Contact Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Imp_Contact_Upon_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to send an email to the Dealer Implementation Contact when this product process is complete.</inlineHelpText>
        <label>Notify Imp. Contact Upon Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Milestones__c</fullName>
        <formula>if( Milestone_1__c !=null, 1, 0)+ 
if( Milestone_2__c !=null, 1, 0)+ 
if( Milestone_3__c !=null, 1, 0)+ 
if( Milestone_4__c !=null, 1, 0)+ 
if( Milestone_5__c !=null, 1, 0)+ 
if( MIlestone_6__c !=null, 1, 0)+ 
if( Milestone_7__c !=null, 1, 0)+ 
if( Milestone_8__c !=null, 1, 0)+ 
if( Milestone_9__c !=null, 1, 0)+ 
if( Milestone_10__c !=null, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Instructions__c</fullName>
        <label>Process Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( Product__r.Family )</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Processes</relationshipLabel>
        <relationshipName>Product_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Department__c</fullName>
        <label>Production Department</label>
        <picklist>
            <picklistValues>
                <fullName>Art Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing/Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search &amp; Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppress_DDM_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress DDM Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Dealer_Advocate_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Dealer Advocate Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Implementation_Manager_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Implementation Manager Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Project_Owner_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Project Owner Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Regional_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Regional Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Territory_Manager_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Territory Manager Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2013ProcessTemp__c</fullName>
        <formula>IF(
   Product__r.X2013ProcessTemp__c = TRUE,
   &quot;TRUE&quot;,
   &quot;FALSE&quot;
)</formula>
        <label>2013ProcessTemp</label>
        <type>Text</type>
    </fields>
    <label>Product Process</label>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Active_Product__c</columns>
        <columns>Number_of_Milestones__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Production_Department__c</columns>
        <columns>X2013ProcessTemp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>Active_Products_2013</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Active_Product__c</columns>
        <columns>Number_of_Milestones__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Production_Department__c</columns>
        <columns>X2013ProcessTemp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>X2013ProcessTemp__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>Active Products 2013</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Active_Product__c</columns>
        <columns>Number_of_Milestones__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Production_Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>